# fortun8

./: README.md  setup.cfg
src/fortun8/: cli.py  prompt_factory.py
